<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="es.cifpcarlos3.proyecto_mesus_android.fragments.LoginFragment"
        android:id="@+id/loginFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@id/form1"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/User"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/form2" android:layout_marginTop="44dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/form1"
            android:id="@+id/form2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Passwd"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/buttonLogginGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonLoginGoogle"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="28dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createAccount"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogle"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp" android:textColor="#1E90FF" app:layout_constraintHorizontal_bias="0.496"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
